--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   go_router: ^5.1.1
   google_fonts: ^3.0.1
+  bloc: ^8.1.0
+  equatable: ^2.0.5
+  flutter_bloc: ^8.1.1
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
